// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render BlogsList with blogs 1`] = `
<div>
  <React.Memo
    blog={
      Object {
        "category": "Web",
        "content": "content",
        "createdAt": "10 Nov 2021",
        "createdBy": "Admin",
        "description": "description",
        "dislikes": 0,
        "id": 1,
        "likes": 1,
        "title": "title",
      }
    }
    key="1"
  />
  <React.Memo
    blog={
      Object {
        "category": "Django",
        "content": "content",
        "createdAt": "15 Nov 2021",
        "createdBy": "Anonymous",
        "description": "description",
        "dislikes": 0,
        "id": 2,
        "likes": 0,
        "title": "title2",
      }
    }
    key="2"
  />
  <React.Memo
    blog={
      Object {
        "category": "React",
        "content": "content",
        "createdAt": "29 Nov 2021",
        "createdBy": "Admin",
        "description": "description",
        "dislikes": 0,
        "id": 3,
        "likes": 1,
        "title": "title2",
      }
    }
    key="3"
  />
</div>
`;

exports[`Should render BlogsList with empty array 1`] = `
<div>
  <p>
    No blogs
  </p>
</div>
`;

exports[`Should render BlogsList with searchFilter 1`] = `
<div>
  <React.Memo
    blog={
      Object {
        "category": "Django",
        "content": "content",
        "createdAt": "15 Nov 2021",
        "createdBy": "Anonymous",
        "description": "description",
        "dislikes": 0,
        "id": 2,
        "likes": 0,
        "title": "title2",
      }
    }
    key="2"
  />
  <React.Memo
    blog={
      Object {
        "category": "React",
        "content": "content",
        "createdAt": "29 Nov 2021",
        "createdBy": "Admin",
        "description": "description",
        "dislikes": 0,
        "id": 3,
        "likes": 1,
        "title": "title2",
      }
    }
    key="3"
  />
</div>
`;
